@@ -1,0 +1,31 @@
+#
+# SchoolTool - common information systems platform for school administration
+# Copyright (c) 2012 Shuttleworth Foundation
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+#
+"""
+Selenium Functional Testing Utilities for course.
+"""
+import os
+
+from schooltool.testing.selenium import SeleniumLayer
+
+dir = os.path.abspath(os.path.dirname(__file__))
+filename = os.path.join(dir, 'stesting.zcml')
+
+resource_selenium_layer = SeleniumLayer(filename,
+                                        __name__,
+                                        'course_selenium_layer')
