@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
+<configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:browser="http://namespaces.zope.org/browser"
+           i18n_domain="schooltool">
+
+  <include package="schooltool.skin.flourish.instance" />
+  <include package="schooltool.testing" file="selenium.zcml" />
+  <browser:defaultSkin name="SchoolToolFlourish" />
+
+</configure>
